# i2

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  pack.py  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  table_of_contents.html
.github/workflows/: ci.yml
_modules/: functools.html  index.html  inspect.html
_modules/i2/: _deprecated.html  base.html  castgraph.html  chain_map.html  deco.html  doc_mint.html  errors.html  footprints.html  io_trans.html  itypes.html  key_path.html  multi_object.html  routing_forest.html  signatures.html  util.html  wrapper.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/: i2.rst.txt
_static/: documentation_options.js
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  table_of_contents.html
docs/_modules/: index.html
docs/_sources/: index.rst.txt  table_of_contents.rst.txt
docs/_static/: documentation_options.js
docs/module_docs/: i2.html
docsrc/: table_of_contents.rst
i2/: __init__.py  _deprecated.py  alternative_approaches.py  base.py  castgraph.py  chain_map.py  deco.py  doc_mint.py  errors.py  footprints.py  genu.py  io_trans.py  itypes.py  key_path.py  misc.py  multi_object.py  notebook.ipynb  routing_forest.py  scrap.py  signatures.py  simple_pymint.py  switch_case_tree.py  util.py  wrapper.py
i2/examples/: __init__.py  castgraph_examples.py  signature_calculus.py
i2/scrap/: __init__.py  notebook.ipynb  scrap.py  scrap_ch_variadics.py  scrap_kwargs.py  signature_bops.py  (+2 more)
misc/: i2 recipes.ipynb  i2.routing.ipynb  i2.wrapper.ipynb
module_docs/: i2.html
py2mint/: alternative_approaches.py  base.py  chain_map.py  deco.py  doc_mint.py  footprints.py  itypes.py  key_path.py  misc.py  scrap.py  signature_mint.py  signatures.py  simple_pymint.py  switch_case_tree.py  util.py
(+170 files in other folders)
