[metadata]
name = i2
version = 0.1.45
url = https://github.com/i2mint/i2
platforms = any
description_file = README.md
root_url = https://github.com/i2mint
description = The middleware toolbox
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache Software License
description-file = README.md

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
;    If you're reading this, know that there are no dependencies,
;	nor will they ever be.
;   So if you're a contributor that's about to add some. Don't.
;	Find another way, or another place, to solve your problem!
