[metadata]
name = i2
version = 0.1.52
url = https://github.com/i2mint/i2
platforms = any
description_file = README.md
root_url = https://github.com/i2mint
description = The middleware toolbox
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache Software License
description-file = README.md

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

